src/test/ui-fulldeps/macro-crate-doesnt-resolve.stderr
error[E0425]: cannot find function `foo` in module `macro_crate_test`
  --> $DIR/macro-crate-doesnt-resolve.rs:7:23
   |
LL |     macro_crate_test::foo(); //~ ERROR cannot find function `foo` in module `macro_crate_test`
   |                       ^^^ not found in `macro_crate_test`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
